<resources>
    <string name="app_name">My Application</string>
    <string name="todo">TODO</string>
    <string name="string_todo" />
    <string name="textview">TextView</string>
    <string name="text">Профиль</string>
    <string name="todo2">TODO2</string>
    <string name="todo3">TODO3</string>
    <string name="textview2">TextView</string>
    <string name="mirsagatov_nurmukhan">Mirsagatov Nurmukhan</string>
    <string name="textview3">TextView</string>
    <string name="_7_747_800_7878">+7 747 800 7878</string>
    <string name="button1">Button</string>
    <string name="button2">Button</string>
    <string name="button3">Button</string>
    <string name="call">TODO4</string>
    <string name="search">TODO5</string>
    <string name="videocall">TODO6</string>
    <string name="status">TextView</string>
    <string name="status1">Это статус</string>
    <string name="zvuk">Без звука</string>
    <string name="kolokol">kolokol</string>
    <string name="uved">Индивидуальные уведомления</string>
    <string name="ikonkauved">ikonka</string>
    <string name="media_ikonka">media_ikonka</string>
    <string name="media">Видимость медиа</string>
</resources>